--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       </div>
                 </div>
                 <div id="clock-box">
-                    <span class="STYLE1"></span><font color="#33CC00">亲爱的筱雯，私はあなたが好きです</font>
+                    <span class="STYLE1"></span><font color="#096">亲爱的筱雯，私はあなたが好きです</font>
 <span class="STYLE1">ずっと永遠に！</span>
               </div>
                 <canvas id="canvas" width="1100" height="680"></canvas>
