--- a/index.html
+++ b/index.html
@@ -25,22 +25,22 @@
              <div id="wrap">
                 <div id="text">
 			        <div id="code">
-			      <font color="#231F20">  	<span class="say">亲爱的，我喜欢你，虽然我们相处只有短短三天</span><br>
+			      <font color="#231F20">  	<span class="say">宝贝，我爱你，天天都在想你</span><br>
 						<span class="say"> </span><br>
-<span class="say"> 彼此都不太了解对方，但我觉得我们会幸福的。</span><br>
-			        	<span class="say">等价交换啊！我把我的人生给你一半，你把你的人生也给我一半吧！</span><br>
-<span class="say">人一生会遇到约2920万人，两个人喜欢的概率是0.000049，遇到我，你就别想跑了！</span><br>
+<span class="say"> 从刚开始的不了解，到现在慢慢熟悉</span><br>
+			        	<span class="say">小笨蛋！不让我省心，我吃亏点，照顾你一辈子吧</span><br>
+<span class="say">人一生会遇到约2920万人，两个人喜欢的概率是0.000049，遇到你就不会让你跑的了，捆住你</span><br>
 <span class="say">这一切,都是命运石之门的选择</span><br>
 
- <span class="say">很喜欢《万叶集》雷神短歌，一直以来都想对喜欢人说一次：隐约雷鸣，阴霾天空，即使天无雨，我亦留此地。</span><br>
- <span class="say zi">YES？还是NO？</span><br>
+ <span class="say">虽然你讨厌下雨，但我并不讨厌雨天，下雨的时候有你送我的雨伞，我一直带着，而且那天晚上下雨，你在电话里面说喜欢我</span><br>
+ <span class="say zi">宝贝，不要因为天气而影响了心情，要给天天都开开心心的</span><br>
 						<span class="say"> </span><br>
                         <span class="say"><span class="space"></span> -- あなたの私を好きになって--</span>
 			  </font></p>
       </div>
                 </div>
                 <div id="clock-box">
-                    <span class="STYLE1"></span><font color="#33CC00">亲爱的筱雯，私はあなたが好きです</font>
+                    <span class="STYLE1"></span><font color="#33CC00">宝贝，私はあなたが好きです</font>
 <span class="STYLE1">ずっと永遠に！</span>
               </div>
                 <canvas id="canvas" width="1100" height="680"></canvas>
